--- a/docs/css/INDEX.css
+++ b/docs/css/INDEX.css
@@ -74,3 +74,11 @@
     border-color: red !important;
 	
 }
+.rssatom{
+    display: block;
+    margin: auto;
+    width: 100;
+    height: 100;
+
+
+}
